[project]
name = "lanchain-chatbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11.14"
dependencies = [
    "langchain-ollama>=1.0.1",
    "ollama>=0.6.1",
    "python-dotenv>=1.2.2",
    "flask>=3.0.0",
    "flask-cors>=4.0.0",
    "langchain>=1.2.10",
    "langchain-community>=0.4.1",
]
